cod-tools (unreleased)

  * Changed:
     - codcif:
       - unified the reaction to forbidden CIF v1.1 and v2.0 symbols
         across the lexers of different CIF versions.
     - COD::CIF::Data::CODFlags:
       - updated the is_duplicate(), is_on_hold(), is_theoretical(),
         has_Fobs(), is_suboptimal(), has_warnings(), has_errors() and
         is_retracted() subroutines to take into consideration data items
         that were introduced in DDL1 'cif_cod.dic' dictionary version 0.040.
     - COD::CIF::Data::CIF2COD:
       - updated the cif2cod() subroutine to take into consideration data items
         that were introduced in DDL1 'cif_cod.dic' dictionary version 0.040.
  * Fixed:
    - codcif:
      - non-orthogonal flag bits were used in CIF_FLEX_LEXER_FLAGS enum;
      - capitalization of 'ASCII' (was 'ascii') in error/warning messages.
    - cif_validate:
      - corrected a typo in a warning message.
    - COD::CIF::Data::CODFlags:
      - corrected the 'is_suboptimal' subroutine to properly evaluate
        the values of relevant data items.
    - COD::CIF::Data::CIF2COD:
      - updated the cif2cod() subroutine to return an undefined value
        for the 'status' column in case an unsupported enumeration value
        is encountered in the input file (i.e. 'note'). 

cod-tools (2.7)

  * Added:
    - COD::SUsage:
      - several error messages informing about non-zero exit status
        while opening or closing files.
    - cif2cod:
      - the --no-reformat-space-group option as a synonym for
        the --leave-space-group option.
    - cif2rdf:
      - the --no-reformat-space-group option as a synonym for
        the --leave-space-group option.
    - COD::CIF::Tags::COD:
      - all data names that were introduced in DDL1 'cif_cod.dic' dictionary
        version 0.040.
  * Changed:
    - cif_distances:
      - slightly reworded the help message.
    - cif_list_tags
      - updated the layout of the help message.
    - cifparse: