@@ -1,1 +1,1 @@
-../inputs/cif2cod/unsupported_status_value.cif
+../inputs/cif2cod/unsupported_error_flag_value.cif
