@@ -1,4 +1,4 @@
 Test the way the script behaves when the input CIF file contains
 '_error_flag_values' data item values that are not supported by
-the SQL database schema. Such values should result in NULL SQL
-values.
+the SQL database schema. Such unsuported values should be recognised,
+reported and treated as undef values.
