@@ -1,0 +1,2 @@
+-h
+--columns "file status"
