@@ -1,0 +1,2 @@
+Test the way the script behaves when the input CIF file contains
+the '_cod_entry_issue_severity' data item with various values.
