@@ -1,4 +1,4 @@
-data_unformated_space_group
+data_unsupported_entry_issue_severity
 _space_group_name_H-M_alt       'P 1'
 _space_group_name_Hall          'P 1'
 _journal_name_full              'Fake journal used for CIF software testing purposes'
@@ -14,7 +14,12 @@ _cell_angle_alpha               90
 _cell_angle_beta                90
 _cell_angle_gamma               90
 _chemical_formula_sum           H
-_cod_error_flag                 'unsupported state'
+loop_
+_cod_entry_issue_id
+_cod_entry_issue_severity
+1 warning
+2 note
+3 errors
 loop_
 _atom_site_label
 _atom_site_type_symbol
