@@ -1,2 +1,3 @@
+scripts/cif2cod: tests/cases/cif2cod_059.inp data_unsupported_error_flag_value: WARNING, data item '_cod_error_flag' value 'unsupported state' does not belong to the set of known error flags ['none' ,'warnings' ,'errors' ,'retracted'] -- value will be ignored.
 file;status
-"unformated_space_group";NULL
+"unsupported_error_flag_value";NULL
