@@ -1,0 +1,3 @@
+scripts/cif2cod: tests/cases/cif2cod_061.inp data_unsupported_entry_issue_severity: WARNING, data item '_cod_entry_issue_severity' value 'errors' does not belong to the set of known severity levels ['note', 'warning', 'error', 'retraction'] -- value will be ignored.
+file;status
+"unsupported_entry_issue_severity";"warnings"
