@@ -1,3 +1,6 @@
+data item '_cod_error_flag' value 'note' does not belong to the set of known error flags ['none' ,'warnings' ,'errors' ,'retracted'] -- value will be ignored
+data item '_cod_error_flag' value 'note' does not belong to the set of known error flags ['none' ,'warnings' ,'errors' ,'retracted'] -- value will be ignored
+data item '_cod_error_flag' value 'note' does not belong to the set of known error flags ['none' ,'warnings' ,'errors' ,'retracted'] -- value will be ignored
 Data block 'cod_status_both_approaches' has the 'retracted' status ('retracted' status expected).
 Data block 'cod_status_both_approaches' has the 'errors' status ('errors' status expected).
 Data block 'cod_status_both_approaches' has the 'warnings' status ('warnings' status expected).
