@@ -1,3 +1,4 @@
+data item '_cod_error_flag' value 'unknown' does not belong to the set of known error flags ['none' ,'warnings' ,'errors' ,'retracted'] -- value will be ignored
 Data block 'cod_error_flag' has the 'warnings' status.
 Data block 'cod_error_flag' has the 'errors' status.
 Data block 'cod_error_flag' has the 'retracted' status.
