@@ -1,3 +1,4 @@
+data item '_cod_entry_issue.severity' value 'unknown' does not belong to the set of known severity levels ['note', 'warning', 'error', 'retraction'] -- value will be ignored
 Data block 'cod_retracted_entry_issues' has the 'retracted' status.
 Data block 'cod_retracted_entry_issues' has the 'errors' status.
 Data block 'cod_retracted_entry_issues' has the 'warnings' status.
