@@ -1,5 +1,9 @@
 cod-tools (unreleased)
 
+  * Added:
+     - COD::CIF::Data::CIF2COD:
+       - several warning messages informing about unrecognised COD error flag
+         values or unrecognised COD issue severity values.
   * Changed:
      - codcif:
        - unified the reaction to forbidden CIF v1.1 and v2.0 symbols
